# twoyi

./: .gitignore  README.md  README_CN.md  build.gradle  gradle.properties  settings.gradle
.github/: FUNDING.yml
.github/workflows/: android.yml
app/: .gitignore  build.gradle  proguard-rules.pro
app/rs/: .gitignore  Cargo.toml  build.rs  build_rs.sh
app/rs/src/: input.rs  lib.rs  openglrender.h  renderer_bindings.rs
app/src/androidTest/java/io/twoyi/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: rom.ini
app/src/main/java/io/twoyi/: BootLogTexture.java  LimitedQueue.java  Render2Activity.java  Renderer.java  TwoyiApplication.java  TwoyiMessenger.java  TwoyiSocketServer.java  TwoyiStatusManager.java  UITips.java
app/src/main/java/io/twoyi/provider/: TwoyiDocumentsProvider.java
app/src/main/java/io/twoyi/ui/: AboutActivity.java  (+2 more)
app/src/main/res/drawable/: ic_add.xml  ic_search.xml  ic_settings.xml
app/src/main/res/layout/: ac_render.xml  activity_createapp.xml  activity_settings.xml  item_create_app.xml
app/src/main/res/menu/: search_menu.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-v27/: themes.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
app/src/main/res/xml/: filepaths.xml  pref_settings.xml  shortcuts.xml
app/src/test/java/io/twoyi/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+15 files in other folders)
