[package]
name = "twoyi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# This must contain at least cdylib for Android libraries to be generated.
crate-type = ["cdylib"]

[dependencies]

libc = "0.2.112"

once_cell = "1.9.0"

# for log
log = "0.4.14"
android_logger = "0.10"

ndk = "0.6.0"
ndk-sys = "0.3.0"
jni = { version = "0.19.0", default-features = false }

# for input system
uinput-sys = "0.1.7"
unix_socket = "0.5.0"


[patch.crates-io]
uinput-sys = { git = 'https://github.com/tiann/rust-uinput-sys' }